RESOLVED FIXED149090
[Win][HighDPI] Windowed plugins have incorrect placement.
https://bugs.webkit.org/show_bug.cgi?id=149090
Summary [Win][HighDPI] Windowed plugins have incorrect placement.
peavo
Reported 2015-09-12 01:00:40 PDT
We have to scale with device scale factor.
Attachments
Patch (3.87 KB, patch)
2015-09-12 01:23 PDT, peavo
no flags
Patch (4.11 KB, patch)
2015-09-17 09:53 PDT, peavo
no flags
peavo
Comment 1 2015-09-12 01:23:48 PDT
peavo
Comment 2 2015-09-14 07:44:48 PDT
(In reply to comment #1) > Created attachment 261051 [details] > Patch This patch needs a little tweaking, it also affects the placements of windowless plugins, which already have correct placement ... :)
Alex Christensen
Comment 3 2015-09-14 11:12:29 PDT
Comment on attachment 261051 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=261051&action=review > Source/WebKit/win/Plugins/PluginViewWin.cpp:961 > + FrameView& frameView = downcast<FrameView>(*parent()); Is the parent always non-null and always a FrameView?
peavo
Comment 4 2015-09-14 12:29:35 PDT
(In reply to comment #3) > Comment on attachment 261051 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=261051&action=review > > > Source/WebKit/win/Plugins/PluginViewWin.cpp:961 > > + FrameView& frameView = downcast<FrameView>(*parent()); > > Is the parent always non-null and always a FrameView? Thanks for reviewing :) This is a good point, I'm not sure. I will put an assert there and test.
peavo
Comment 5 2015-09-17 09:53:29 PDT
Alex Christensen
Comment 6 2015-09-17 10:35:31 PDT
Comment on attachment 261393 [details] Patch r=me. Thanks!
peavo
Comment 7 2015-09-17 11:09:32 PDT
(In reply to comment #6) > Comment on attachment 261393 [details] > Patch > > r=me. Thanks! Thanks for reviewing :)
WebKit Commit Bot
Comment 8 2015-09-17 11:23:11 PDT
Comment on attachment 261393 [details] Patch Clearing flags on attachment: 261393 Committed r189919: <http://trac.webkit.org/changeset/189919>
WebKit Commit Bot
Comment 9 2015-09-17 11:23:16 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.