[Win][HighDPI] Windowed plugins have incorrect placement. https://bugs.webkit.org/show_bug.cgi?id=149090

Reviewed by Alex Christensen.

We have to scale plugin dimensions with device scale factor.

* Plugins/PluginView.cpp:
(WebCore::PluginView::windowClipRect):
* Plugins/PluginView.h:
* Plugins/PluginViewWin.cpp:
(WebCore::PluginView::updatePluginWidget):
(WebCore::PluginView::setNPWindowRect):
(WebCore::PluginView::snapshot):
(WebCore::PluginView::deviceScaleFactor):


Canonical link: https://commits.webkit.org/167365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189919 268f45cc-cd09-0410-ab3c-d52691b4dbfc